[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medkg"
version = "0.1.0"
description = "Medical Knowledge Graph for Neurovascular Diseases"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [
    {name = "MEDKG Contributors"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "biopython>=1.83",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
mcp = ["mcp>=0.1.0"]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/blue-gitty/medical-kg"
Repository = "https://github.com/blue-gitty/medical-kg"

[tool.setuptools.packages.find]
where = ["."]
include = ["medkg*"]

[tool.setuptools.package-data]
medkg = ["py.typed"]
